<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_scan"
        android:icon="@drawable/scan_scanner"
        android:title="@string/scan"
        />

    <item
        android:id="@+id/nav_generate"
        android:icon="@drawable/create_qr"
        android:title="@string/create"
        />

<!--    <item-->
<!--        android:id="@+id/nav_template"-->
<!--        android:icon="@drawable/ic_template_icon"-->
<!--        android:title="@string/templates"-->
<!--        app:showAsAction="withText"-->
<!--        />-->

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/qr_history"
        android:title="@string/history"
        />

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/settings_scanner"
        android:title="@string/menu_setting"
        />

</menu>
