<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/permission_dialog">

    <TextView
        android:id="@+id/app_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/app_permission"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_permission"
        android:orientation="vertical"
        android:padding="10dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/read_storage"
                android:textColor="@color/tt_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt1"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/read"
                android:textSize="16sp" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/write_storage"
                android:textColor="@color/tt_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt2"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/write"
                android:textSize="16sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/camera_permission"
                android:textColor="@color/tt_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt3"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/camera"
                android:textSize="16sp" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">


            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/vibrate_permissions"
                android:textColor="@color/tt_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt4"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/vibrate_per"
                android:textSize="16sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/wifi_state_permission"
                android:textColor="@color/tt_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt5"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/wifi"
                android:textSize="16sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/txt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/contacts_permissions"
                android:textColor="@color/tt_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt6"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/contact"
                android:textSize="16sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/txt7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/account_permissions"
                android:textColor="@color/tt_black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/txt14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt7"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/account"
                android:textSize="16sp" />

        </RelativeLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/got"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_buttons"
        android:focusable="false"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/got_it"
        android:textAllCaps="true"
        android:textColor="@color/whiteLight"
        android:textSize="18sp" />

</RelativeLayout>