<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:paddingStart="0dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:focusable="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:scaleType="fitXY"
            android:src="@drawable/back_scanner"
            app:tint="@color/tt_black" />

        <TextView
            android:id="@+id/fragmentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/backButton"
            android:fontFamily="@font/roboto_regular"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/QRCode"
            android:textColor="@color/tt_black"
            android:textSize="18sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:fontFamily="@font/roboto_regular"
        android:includeFontPadding="false"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/scanning_low_budget"
        android:textColor="@color/tt_black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainText"
        android:fontFamily="@font/roboto_regular"
        android:padding="10dp"
        android:text="@string/scanned_not_work_txt"
        android:textColor="@color/tt_black"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/scan_img"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/scanning_tips3"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scan_img"
        android:layout_marginStart="140dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/scan_img"
        android:textColor="@color/whiteLight"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/good_luck"
        android:textColor="@color/darkMainColor"
        android:textSize="18sp" />

</RelativeLayout>