<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zxing_transparent">


    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:elevation="4dp"
        android:padding="20dp"
        app:cardCornerRadius="12dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/save_qr_as"
                android:textAlignment="center"
                android:textColor="@color/tt_black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/save_png"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/dialogue_bg"
                android:elevation="8dp"
                android:layout_marginBottom="2dp"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center_vertical|center_horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textStyle="bold"
                    android:includeFontPadding="false"
                    android:text="@string/png"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="visible" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="#A84B535B"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/save_pdf"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_marginTop="2dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/go_premium_bg"
                android:elevation="8dp"
                android:layout_marginBottom="20dp"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center_vertical|center_horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/pdf"
                    android:textStyle="bold"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="visible" />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>
</RelativeLayout>